2006-06-12 Updated numerix.fft to handle numpy restructuring
           Added ImportError to numerix.linear_algebra for numpy -TEO

2006-06-11 Added quiverkey command to pylab and Axes, using
           QuiverKey class in quiver.py.  Changed pylab and Axes
           to use quiver2 if possible, but drop back to the
           newly-renamed quiver_classic if necessary.  Modified
           examples/quiver_demo.py to illustrate the new quiver
           and quiverkey.  Changed LineCollection implementation
           slightly to improve compatibility with PolyCollection. - EF

2006-06-11 Fixed a usetex bug for windows, running latex on files
           with spaces in their names or paths was failing - DSD

2006-06-09 Made additions to numerix, changes to quiver to make it
           work with all numeric flavors. - EF

2006-06-09 Added quiver2 function to pylab and method to axes,
           with implementation via a Quiver class in quiver.py.
           quiver2 will replace quiver before the next release;
           it is placed alongside it initially to facilitate
           testing and transition. See also
           examples/quiver2_demo.py. - EF

2006-06-08 Minor bug fix to make ticker.py draw proper minus signs
           with usetex - DSD

===============================================================
2006-06-06 Released 0.87.3 at revision 2432

2006-05-30 More partial support for polygons with outline or fill,
           but not both.  Made LineCollection inherit from
           ScalarMappable. - EF

2006-05-29 Yet another revision of aspect-ratio handling. - EF

2006-05-27 Committed a patch to prevent stroking zero-width lines in
           the svg backend - DSD

2006-05-24 Fixed colorbar positioning bug identified by Helge
           Avlesen, and improved the algorithm; added a 'pad'
           kwarg to control the spacing between colorbar and
           parent axes. - EF

2006-05-23 Changed color handling so that collection initializers