@@ -1,4 +1,4 @@
-from numpy import Int8, UInt8, \
+from numpy.oldnumeric import Int8, UInt8, \
      Int16, UInt16, \
      Int32, UInt32, \
      Float32, Float64, \
